// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalList Navigator Renders \`items\` translation for an approval list size greater than one 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginLeft": -2,
      }
    }
  >
    [missing "en.APPROVAL.APPROVE_ITEMS" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "fontSize": 14,
        "marginLeft": -2,
      }
    }
  >
    5 [missing "en.GENERICS.ITEMS" translation]
  </Text>
</View>
`;

exports[`ApprovalList Navigator Renders single \`item\` translation for an approval list size of one 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginLeft": -2,
      }
    }
  >
    [missing "en.APPROVAL.APPROVE_ITEMS" translation]
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffffff",
        "fontSize": 14,
        "marginLeft": -2,
      }
    }
  >
    1 [missing "en.GENERICS.ITEM" translation]
  </Text>
</View>
`;

exports[`ApprovalList Navigator Renders the SelectedItemQty component  1`] = `
<Text
  style={
    Object {
      "color": "#ffffffff",
      "fontSize": 20,
      "fontWeight": "bold",
      "marginLeft": -2,
    }
  }
>
  4 [missing "en.APPROVAL.SELECTED" translation]
</Text>
`;

exports[`ApprovalList Navigator Renders the approval list navigator component 1`] = `
<SideMenu
  animationFunction={[Function]}
  animationStyle={[Function]}
  autoClosing={true}
  bounceBackOnOverdraw={true}
  disableGestures={false}
  edgeHitWidth={60}
  hiddenMenuOffset={0}
  isOpen={false}
  menu={<ApprovalFilter />}
  menuPosition="right"
  onAnimationComplete={[Function]}
  onChange={[Function]}
  onMove={[Function]}
  onSliding={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  openMenuOffset={500}
  toleranceX={10}
  toleranceY={10}
>
  <StackNavigator
    screenOptions={
      Object {
        "headerMode": "float",
        "headerStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "headerTintColor": "#ffffffff",
      }
    }
  >
    <Screen
      component={[Function]}
      name="Approval"
      options={
        Object {
          "headerLeft": undefined,
          "headerLeftContainerStyle": Object {
            "paddingLeft": 10,
          },
          "headerRight": [Function],
          "headerRightContainerStyle": Object {
            "alignItems": "center",
            "flexDirection": "row-reverse",
            "paddingRight": 16,
          },
          "headerTitle": [Function],
        }
      }
    />
    <Screen
      component={[Function]}
      name="ApproveSummary"
      options={
        Object {
          "headerTitle": "[missing \\"en.APPROVAL.REVIEW\\" translation]",
        }
      }
    />
    <Screen
      component={[Function]}
      name="RejectSummary"
      options={
        Object {
          "headerTitle": "[missing \\"en.APPROVAL.REVIEW\\" translation]",
        }
      }
    />
  </StackNavigator>
</SideMenu>
`;

exports[`ApprovalList Navigator Renders the closeButton component  1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
>
  <mockConstructor
    color="#ffffffff"
    name="close"
    size={22}
  />
</TouchableOpacity>
`;

exports[`ApprovalList Navigator Renders the deselect all button header 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row-reverse",
      "paddingRight": 16,
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
  >
    <mockConstructor
      color="#ffffffff"
      name="filter-list"
      size={25}
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.APPROVAL.DESELECT_ALL" translation]
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`ApprovalList Navigator Renders the select all button header 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row-reverse",
      "paddingRight": 16,
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
  >
    <mockConstructor
      color="#ffffffff"
      name="filter-list"
      size={25}
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        [missing "en.APPROVAL.SELECT_ALL" translation]
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
